--- a/LR1/css/style.css
+++ b/LR1/css/style.css
@@ -50,8 +50,8 @@ a{
   padding: 0px 28px;
 }
 
-/* Header */
-.header__container{
+/* NAV */
+.nav__container{
   display: flex;
   flex-direction: row;
 
@@ -60,7 +60,7 @@ a{
   justify-content: space-between;
 }
 /* LEFT NAV */
-.header__left{
+.nav__left{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -82,7 +82,7 @@ a{
 .btn-secondary:hover{
   background-color: rgba(0,26,52,.2);;
 }
-.header__left-link{
+.nav__left-link{
   display: flex;
   flex-shrink: 1;
   width: 100%;
@@ -103,14 +103,15 @@ a{
 }
 /* RIGHT NAV */
 .nav{
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   padding: 4px;
   margin-left: auto;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 .nav-link{
   padding: 0;
@@ -126,4 +127,58 @@ a{
 
   background-color: var(--ozBluePale);
   border-radius: 8px;
+}
+
+
+/* HEADER */
+.header__nav{
+  width: 100%;
+  padding: 8px 0 0;
+}
+.header__nav .nav{
+  padding: 0;
+}
+.header__container{
+  display: flex;
+  flex-direction: column;
+  min-height: 100px;
+  padding: 4px 28px;
+
+  align-items: center;
+  justify-content: space-between;
+}
+.search-img__item{
+  margin-right: 38px;
+}
+.search-img__link{
+  display: flex;
+  width: 128px;
+  height: 40px;
+
+  align-items: center;
+}
+.search-img__pictures{
+  max-width: 100%;
+  max-height: 100%;
+}
+.header__nav-item{
+  padding: 4px;
+}
+.header__nav-item:not(:last-child){
+  margin-right: 12px;
+}
+.header__nav-link{
+  display: flex;
+
+  font-size: 14px;
+}
+.header__nav-icon{
+  display: block;
+  height: 16px;
+  width: 16px;
+  margin-right: 5px;
+  
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
