--- a/LR1/css/style.css
+++ b/LR1/css/style.css
@@ -34,6 +34,7 @@
   --ozGray60: #5a6c7d;
   --ozTextAction: #005bff;
   --ozBluePale: #e5efff;
+  --ozTextSecondary: #707f8d;
 }
 body{
   height: 100%;
@@ -42,6 +43,9 @@ body{
 }
 a{
   text-decoration: none;
+}
+ul{
+  list-style-type: none;
 }
 
 .container{
@@ -76,7 +80,7 @@ a{
 
   font-size: 12px;
   text-align: center;
-  color: #707f8b;
+  color: var(--ozTextSecondary);
   text-transform: uppercase;
 }
 .btn-secondary:hover{
@@ -145,7 +149,11 @@ a{
   padding: 4px 28px;
 
   align-items: center;
-  justify-content: space-between;
+}
+.header-search{
+  display: flex;
+  padding: 8px 0;
+  max-height: 56px;
 }
 .search-img__item{
   margin-right: 38px;
@@ -161,6 +169,97 @@ a{
   max-width: 100%;
   max-height: 100%;
 }
+
+/* search-catalog__btn */
+.search-catalog__btn{
+  margin-right: 24px;
+}
+
+/* search__input-form */
+.search__input-form{
+  display: flex;
+  height: 40px;
+  margin-right: 45px;
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--ozTextAction);
+  border-radius: 8px;
+}
+
+/* search__form */
+.search__form{
+  display: flex;
+  border: 2px solid var(--ozTextAction);
+  border-radius: 8px;
+  background-color: white;
+}
+.btn-light{
+  display: flex;
+  align-items: center;
+  margin: 3px 3px 3px 2px;
+  padding: 0px 2px;
+}
+.btn-light__text{
+  margin-left: 8px;
+  color: var(--ozTextSecondary);
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+}
+.form-control{
+  border: none;
+  border-radius: 4px;
+  width: 565px;
+}
+
+/* search__btn */
+.search__btn{
+  box-sizing: border-box;
+  width: 74px;
+  height: 40px;
+  min-width: 74px;
+  padding: 2px 2px 2px 0;
+}
+.btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn-primary{
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
+
+/* search__icon */
+.search-icon__description{
+  display: flex;
+  align-items: center;
+}
+.search-icon{
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+.search-icon__item:not(:last-child){
+  margin-right: 45px;
+}
+.search-icon__link{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  color: #001a34;
+}
+.search-icon__text{
+  font-size: 14px;
+  line-height: 18px;
+}
+
+
+
 .header__nav-item{
   padding: 4px;
 }
@@ -181,4 +280,10 @@ a{
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: contain;
+}
+.header__nav-link{
+  color: var(--ozTextPrimary);
+}
+.header_active{
+  color: #00a6a6;
 }
