--- a/LR1/css/style.css
+++ b/LR1/css/style.css
@@ -375,6 +375,8 @@ ul{
   display: flex;
   align-items: center;
   justify-content: center;
+
+  font-size: 14px;
 }
 .left__comments li:not(:last-child){
   margin-right: 15px;
@@ -386,6 +388,7 @@ ul{
 
 /* product__info */
 .product__info{
+  display: flex;
   padding-top: 32px;
 }
 .product__img{
@@ -408,7 +411,20 @@ ul{
 }
 .product__img_right{
   height: 500px;
+  margin-left: 14px;
 }
 .product__img_right img{
   height: 100%;
+}
+
+.product__info-categories{
+  margin-left: 24px;
+}
+.info__header-item{
+  display: flex;
+}
+.info__header{
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
 }
