--- a/LR1/css/style.css
+++ b/LR1/css/style.css
@@ -153,9 +153,12 @@ ul{
   align-items: center;
 }
 .header-search{
+  
   display: flex;
   padding: 8px 0;
   max-height: 56px;
+
+  background-color: white;
 }
 .search-img__item{
   margin-right: 38px;
@@ -591,7 +594,7 @@ ul{
 
 /* product-price__questions */
 .product-price__questions{
-  padding: 20px 0;
+  padding: 20px 0 12px 0;
 }
 
 /* product-price__credit */
@@ -665,4 +668,157 @@ ul{
 .delivery__city{
   display: flex;
   align-items: center;
+  padding-bottom: 8px;
+
+  border-bottom: 1px solid rgba(204,214,228,.6);
+}
+.delivery__city-text{
+  font-size: 16px;
+  color: var(--ozTextPrimary);
+}
+.delivery__city-icon{
+  color: rgba(204,214,228,.6);
+}
+.delivery__courier,
+.delivery__point{
+  display: flex;
+  flex-direction: column;
+
+  margin: 16px 0 0 36px;
+  padding-right: 16px;
+}
+.delivery__courier{
+  margin: 8px 0 0 36px;
+}
+.delivery__descr{
+  font-size: 14px;
+  color: #707f8d;
+}
+.city-icon{
+  margin-right: 12px;
+}
+.city-text__link{
+  display: flex;
+  justify-content: space-between;
+}
+.delivery__city-text{
+  color: var(--ozTextPrimary);
+}
+.delivery__city-icon{
+  margin-left: 21px;
+}
+.city-text__link .delivery__city-text:hover{
+  color: #005bff;
+}
+.city-text__link:hover .delivery__city-icon:hover{
+  color: #005bff;
+}
+
+
+/* reviews */
+.reviews{
+  padding-top: 88px;
+  margin-bottom: 32px;
+}
+.container__reviews{
+  display: flex;
+  flex-direction: row;
+}
+.reviews__img{
+  display: block;
+  position: relative;
+  height: 90px;
+  width: 90px;
+  
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+  overflow: hidden;
+  background-color: transparent;
+}
+.reviews__img:not(:last-child){
+  margin-right: 4px;
+}
+.z7-a{
+  max-height: none;
+  max-width: none;
+  min-height: 100%;
+  min-width: 100%;
+}
+.z5s{
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  color: white;
+}
+.z5s__text{
+  top: 35%;
+  left: 25%;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+
+/* seller */
+
+.seller-item{
+  display: flex;
+  padding: 24px;
+
+  border: 1px solid rgba(204,214,228,.6);
+  border-radius: 12px;
+}
+.seller_left{
+  display: flex;
+  width: 347px;
+  padding: 0 24px 0 0;
+
+  border-right: 1px solid rgba(204,214,228,.6);
+}
+.seller-left__img img{
+  display: block;
+  width: 72px;
+  height: 72px;
+  margin-right: 15px;
+
+  border-radius: 50%;
+}
+.seller-left__text{
+  display: flex;
+  flex-direction: column;
+}
+.seller-left__title{
+  margin-bottom: 6px;
+
+  font-size: 14px;
+  color: #707f8d;
+  line-height: 18px;
+}
+.seller-left__link{
+  color: var(--ozTextPrimary);
+  font-weight: 700;
+  font-size: 16px;
+}
+.seller-left__link:hover{
+  color: var(--ozTextAction);
+}
+
+.seller_right{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 20px;
+}
+.seller__card{
+  margin-bottom: 12px;
+}
+.seller__card,
+.seller__ref{
+  font-size: 14px;
+  color: var(--ozTextPrimary);
+}
+
+/* seller-other */
+.seller-other{
+  padding-top: 24px;
 }
