--- a/LR1/css/style.css
+++ b/LR1/css/style.css
@@ -184,6 +184,76 @@ ul{
   height: 40px;
 }
 
+
+.catalog{
+  padding: 30px 0;
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+.visibility{
+  display: flex;
+}
+.catalog__container{
+  display: flex;
+}
+
+.catalog__categories{
+  width: 282px;
+  margin-right: 24px;
+}
+.categories__icon-arrow{
+  margin-left: auto;
+}
+.categories__item{
+  padding: 0;
+  border-right: 1px solid rgba(14,50,103,.04);;
+}
+.categories__list{
+  border-radius: 10px;
+}
+.categories__list a{
+  align-items: center;
+  border-radius: 12px;
+  box-sizing: border-box;
+  color: #001a34;
+  display: flex;
+  gap: 8px;
+  min-height: 48px;
+  padding: 5px 8px;
+}
+.categories__list:hover{
+  background-color: #f8f9f8;
+}
+.product__title{
+  font-size: 30px;
+  line-height: 38px;
+  font-weight: 700;
+}
+.product__text{
+  margin-bottom: 24px;
+}
+.product__column-list{
+  width: 100%;
+}
+.product__description{
+  font-size: 14px;
+  font-weight: 400;
+  color: #707f8d;
+}
+.product__column{
+  display: flex;
+  gap: 30px;
+  width: 972px;
+}
+
+
+
+
 /* search__input-form */
 .search__input-form{
   display: flex;
